# s5-rs

./: Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  flake.nix
.github/workflows/: ci.yml
bindings/s5_client/: Cargo.toml
bindings/s5_client/src/: crypto.rs  keys.rs  lib.rs
bindings/s5_flutter/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flutter_rust_bridge.yaml  pubspec.yaml
bindings/s5_flutter/lib/: s5_flutter.dart
bindings/s5_flutter/lib/src/rust/: api.dart  api.freezed.dart  frb_generated.dart  frb_generated.h  frb_generated.io.dart  frb_generated.web.dart
bindings/s5_flutter/src/: api.rs  frb_generated.rs  lib.rs
bindings/s5_wasm/: Cargo.toml  README.md  build.sh
bindings/s5_wasm/src/: client.rs  lib.rs
blob_stores/fjall/: Cargo.toml
blob_stores/fjall/src/: lib.rs
blob_stores/local/: Cargo.toml  README.md
blob_stores/local/src/: lib.rs  prune.rs
blob_stores/local_links/: Cargo.toml
blob_stores/local_links/src/: lib.rs
blob_stores/memory/: Cargo.toml  README.md
blob_stores/memory/src/: lib.rs
blob_stores/s3/: Cargo.toml  README.md
blob_stores/s3/src/: lib.rs
blob_stores/sia/: Cargo.toml  README.md
blob_stores/sia/src/: config.rs  lib.rs  store.rs
blob_stores/sia/src/temp/: mod.rs  zen.rs
docs/: config.example.toml
docs/guides/: friend-storage-client.md  friend-storage-operator.md  s5-workflows.md  sia-web-cdn.md  vup-user-guide.md
docs/reference/: cli-workflows.md  (+5 more)
fs5/: Cargo.toml
guides/: sia-web-cdn.md
importers/http/: Cargo.toml  README.md
importers/http/src/: lib.rs
importers/local/: Cargo.toml  README.md
importers/local/src/: lib.rs
ingest/local/: Cargo.toml
ingest/local/src/: backup.rs  lib.rs  restore.rs
registries/redb/: Cargo.toml
registries/redb/src/: lib.rs
registries/store/: Cargo.toml
registries/store/src/: lib.rs
s5_base/: Cargo.toml
s5_base/src/: hash.rs  lib.rs  registry.rs  stream.rs
s5_base/src/api/: blobs.rs  mod.rs  pinning.rs  registry.rs
s5_base/src/blob/: identifier.rs  location.rs  mod.rs
s5_blobs/: Cargo.toml  README.md
s5_blobs/src/: client.rs  config.rs  lib.rs  multi_fetcher.rs  net_protocol.rs  protocol.rs  rpc.rs  store_remote.rs
s5_blobs/tests/: client_server_roundtrip.rs
s5_cli/: Cargo.toml  README.md
s5_cli/src/: helpers.rs  init_config.rs  main.rs
s5_cli/src/cmd/: blobs.rs  import.rs  mod.rs  mount.rs  snapshots.rs  tree.rs  util.rs
s5_cli/tests/: blobs_gc_verify.rs
s5_compression/: Cargo.toml
s5_core/: Cargo.toml  README.md
s5_core/benches/: blob_store.rs
s5_core/src/: caching.rs  crypto.rs  hash.rs  lib.rs  registry.rs  store.rs  stream.rs  testutil.rs  vaults.rs
s5_core/src/api/: blobs.rs  mod.rs  registry.rs  streams.rs
s5_core/src/api/blobs/: store.rs
s5_core/src/bao/: mod.rs  outboard.rs
s5_core/src/blob/: cached.rs  fallback.rs  identifier.rs  import.rs  location.rs  mod.rs  paths.rs  read.rs  store.rs  tee.rs  verify.rs
s5_core/src/cbor/: mod.rs  value.rs
s5_core/src/fs/: dir.rs
s5_core/src/identity/: bundle.rs  did.rs  mod.rs
s5_core/src/pins/: mod.rs  registry_pinner.rs
s5_core/src/registry/: mod.rs
s5_core/src/stream/: mod.rs  registry.rs  types.rs
s5_core/src/stream/types/: mod.rs  order.rs
s5_experiments/sia_rhp4_webtransport_streamer/: Cargo.toml
s5_experiments/sia_rhp4_webtransport_streamer/src/: lib.rs
s5_fs/: Cargo.toml  README.md
s5_fs/benches/: fs5_ops.rs
s5_fs/src/: actor.rs  api.rs  context.rs  debug.rs  dir.rs  gc.rs  lib.rs  snapshots.rs  spawn.rs
s5_fs/src/actor/: listing.rs  merge.rs  persistence.rs  sharding.rs  snapshots.rs
s5_fs/tests/: autosave.rs  conflict_resolution.rs  gc_tombstones.rs  integration.rs  recursive_promotion.rs  sharding.rs  snapshots.rs  subdir_scoping.rs
s5_fs_v2/: Cargo.toml
s5_fs_v2/src/: chunking.rs  context.rs  copy.rs  import_stats.rs  layer.rs  lib.rs  merge.rs  node.rs  overlay.rs  persist.rs  pipeline.rs  snapshot.rs
s5_fuse/: Cargo.toml  README.md
s5_fuse/src/: attr.rs  cache.rs  debounce.rs  fs.rs  lib.rs  main.rs  mount.rs  path.rs  read.rs  write.rs
s5_node/: Cargo.toml  README.md
s5_node/src/: admission.rs  bootstrap.rs  config.rs  config_vault.rs  device_keyset.rs  enroll.rs  export.rs  fuse.rs  health.rs  identity.rs  identity_anchor.rs  identity_secrets_vault.rs  identity_vault.rs  lib.rs  membership.rs  membership_subscribe.rs  mnemonic.rs  pair.rs  peer_observer.rs  registry_protocol.rs  s5_server.rs  share.rs  snapshot.rs  special_vaults.rs  store_registry.rs  store_remote.rs  sync.rs  watch.rs
s5_node/src/tasks/: cold_gc.rs  copy.rs  ingest.rs  list.rs  mod.rs  peer_load.rs  publish.rs  restore.rs  vault_persist.rs
s5_node/tests/: async_relay.rs  automate_e2e.rs  concurrent_publish.rs  control_auth_e2e.rs  copy_e2e.rs  durability_barrier_e2e.rs  enroll_e2e.rs  fs_sync_complete.rs  fs_sync_large_blob.rs  health_e2e.rs  identity_bootstrap.rs  interrupt_resume_e2e.rs  list_tree_e2e.rs  local_links_serve.rs  membership_resolution.rs  peer_load.rs  recovery_e2e.rs  restore_snapshot_e2e.rs  share_e2e.rs  share_subtree_e2e.rs  watch_schedule_e2e.rs  workflows.rs
s5_node/tests/common/: mod.rs
s5_node_api/: Cargo.toml  build.rs
s5_node_api/src/: client.rs  config.rs  connect.rs  lib.rs  rpc.rs
s5_registry/: Cargo.toml  README.md
s5_registry/src/: lib.rs
s5_utils/: Cargo.toml
stores/indexd/: Cargo.toml
stores/indexd/examples/: end_to_end.rs
stores/indexd/src/: auth.rs  backend.rs  cache.rs  encode.rs  lib.rs  pointer.rs
stores/indexd/tests/: real_indexd.rs  sealed_roundtrip.rs
stores/packing/: Cargo.toml
stores/packing/src/: binpack.rs  lib.rs  manifest.rs  tests.rs
vup_cli/: Cargo.toml  README.md
vup_cli/src/: config.rs  interact.rs  lib.rs  main.rs  node.rs  progress.rs  recovery.rs  refs.rs  sigil.rs  vault.rs
vup_cli/src/cmd/: automate.rs  backup.rs  copy.rs  device.rs  device_bootstrap.rs  doctor.rs  init.rs  lifecycle.rs  membership.rs  mod.rs  onboard.rs  recover.rs  service.rs  share.rs  store.rs  store_config.rs  stubs.rs  tasks.rs  vault.rs
vup_cli/tests/: e2e_milestone1.rs
(+8 files in other folders)
