[workspace]
resolver = "3"
members = [
  "blob_stores/local",
  "blob_stores/s3",
  "blob_stores/sia",
  "s5_blobs",
  "s5_cli",
  "s5_core",
  "s5_fs",
  "s5_node",
  "tools/http_importer",
]

[workspace.dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
blake3 = { version = "1.8.2", features = [
  "mmap",
  "rayon",
] }
bytes = { version = "1.10.1" }
futures = "0.3.31"
http_importer = { path = "tools/http_importer" }
iroh = { version = "0.92.0" }
iroh-blobs = { version = "0.94.0" }
irpc = "0.8.0"
log = "0.4.28"
minicbor = { version = "2.0.0", features = ["alloc", "derive", "half"] }
s5_blobs = { path = "s5_blobs" }
s5_core = { path = "s5_core" }
s5_node = { path = "s5_node" }
s5_store_local = { path = "blob_stores/local" }
s5_store_s3 = { path = "blob_stores/s3" }
s5_store_sia = { path = "blob_stores/sia" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tracing = "0.1.41"

