[workspace]
resolver = "3"
members = [
  # Core crates
  "s5_blobs",
  "s5_core",
  "s5_fs_v2",
  "s5_fuse",
  "s5_node",
  "s5_node_api",
  "s5_registry",
  # Blob stores
  "blob_stores/local",
  "blob_stores/local_links",
  "blob_stores/memory",
  "blob_stores/s3",
  "blob_stores/sia",
  "blob_stores/fjall",
  # Decorating stores (path-agnostic Store wrappers)
  "stores/packing",
  # Backend-specific stores
  "stores/indexd",
  # Registries
  "registries/redb",
  "registries/store",
  # Ingest
  "ingest/local",
  # Compression
  "s5_compression",
  # CLI tools
  "vup_cli",
]

# Pre-v2 generation, superseded by the s5_fs_v2 stack and incompatible with the
# evolved s5_core stream API. Kept on disk but out of the workspace (unbuilt,
# unpublished): s5_fs (v1), and its dependents s5_cli, importers/*, bindings/*.
exclude = [
  "s5_fs",
]

[workspace.dependencies]
age = { version = "0.11", default-features = false }
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22"
blake3 = { version = "1.8.5", features = [
  "mmap",
  "rayon",
] }
# default-features = false drops `parallel`/rayon (no wasm32 support); the
# packing index only calls single-threaded `Mphf::new` off a blocking thread.
boomphf = { version = "0.6", default-features = false }
bytes = { version = "1.12.0" }
clap = { version = "4", features = ["derive"] }
dashmap = "6"
ed25519-dalek = "2"
futures = "0.3.32"
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4"
iroh = { version = "1.0.0" }
irpc = "0.17.0"
irpc-iroh = "0.17.0"
json-patch = "4.2.0"
libc = "0.2"
log = "0.4.33"
minicbor = { version = "2.2.2", features = ["alloc", "derive", "half"] }
postcard = "1.1.3"
rand = "0.10"
redb = "3.1.0"
s5_blobs = { path = "s5_blobs", version = "1.0.0-beta.2", default-features = false }
s5_core = { path = "s5_core", version = "1.0.0-beta.2" }
s5_fs_v2 = { path = "s5_fs_v2", version = "1.0.0-beta.2" }
s5_fs_local = { path = "ingest/local", version = "1.0.0-beta.2" }
s5_fuse = { path = "s5_fuse", version = "1.0.0-beta.2" }
s5_node = { path = "s5_node", version = "1.0.0-beta.2" }
s5_node_api = { path = "s5_node_api", version = "1.0.0-beta.2" }
s5_registry = { path = "s5_registry", version = "1.0.0-beta.2" }
s5_registry_redb = { path = "registries/redb", version = "1.0.0-beta.2" }
s5_registry_store = { path = "registries/store", version = "1.0.0-beta.2" }
s5_store_local = { path = "blob_stores/local", version = "1.0.0-beta.2" }
s5_store_local_links = { path = "blob_stores/local_links", version = "1.0.0-beta.2" }
s5_store_indexd = { path = "stores/indexd", version = "1.0.0-beta.2" }
s5_store_memory = { path = "blob_stores/memory", version = "1.0.0-beta.2" }
s5_store_packing = { path = "stores/packing", version = "1.0.0-beta.2" }
s5_store_s3 = { path = "blob_stores/s3", version = "1.0.0-beta.2" }
s5_store_sia = { path = "blob_stores/sia", version = "1.0.0-beta.2" }
s5_store_fjall = { path = "blob_stores/fjall", version = "1.0.0-beta.2" }
serde = { version = "1.0.228", features = ["derive"] }
sia_core = "0.4.1"
sia_storage = "0.10.0"
serde_json = "1"
tempfile = "3"
thiserror = "2.0.18"
# WASM-compatible tokio features: sync, macros, io-util, rt, time
# Native crates that need more features should add them explicitly
tokio = { version = "1.52.3", features = ["sync", "macros", "io-util", "rt", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
zeroize = "1.9"
criterion = { version = "0.5.1", features = ["async_tokio"], default-features = false }

[workspace.package]
version = "1.0.0-beta.2"
