[package]
name = "s5_blobs"
version = "1.0.0-beta.1"
edition = "2024"
description = "Blob management and networking for S5"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bytes.workspace = true
futures.workspace = true
futures-util = "0.3.31"
iroh.workspace = true
irpc.workspace = true
irpc-iroh.workspace = true
log = "0.4.28"
postcard.workspace = true
s5_core.workspace = true
serde.workspace = true
serde-big-array = "0.5.1"
thiserror = "2.0.16"
tracing.workspace = true
base64 = "0.22"

# Core dependencies (always available)
async-trait.workspace = true

# Server-only dependencies
dashmap = { version = "6.1.0", optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { version = "0.1.17", optional = true }

[features]
default = ["server"]
# Server-side functionality (requires tokio, not WASM-compatible)
server = ["dep:tokio", "dep:tokio-stream", "dep:dashmap"]

[dev-dependencies]
s5_store_memory.workspace = true
