[package]
name = "s5_blobs"
version.workspace = true
edition.workspace = true
description = "Blob management and networking for S5"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
futures-util.workspace = true
iroh.workspace = true
irpc.workspace = true
irpc-iroh.workspace = true
log.workspace = true
postcard.workspace = true
rand.workspace = true
s5_core.workspace = true
serde.workspace = true
serde-big-array = "0.5.1"
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true

# Core dependencies (always available)
async-trait.workspace = true

# Server-only dependencies
dashmap = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

[features]
default = ["server"]
# Server-side functionality (requires tokio, not WASM-compatible)
server = ["dep:tokio", "dep:tokio-stream", "dep:dashmap"]

[dev-dependencies]
s5_store_memory.workspace = true
