[package]
name = "s5_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "s5"
path = "src/main.rs"
test = false
bench = false

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
  "tracing",
] }
directories = "6.0.0"
http_importer = { workspace = true }
rand = "0.9.2"
s5_node = { workspace = true }
# TODO remove this dependency and move it to s5_node
s5_store_sia = { workspace = true }
tokio = { workspace = true }
toml = "0.9.5"
toml_edit = "0.23.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
