[package]
name = "s5_core"
version = "1.0.0-beta.1"
edition = "2024"
description = "types and traits shared by all S5 crates"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[features]
default = []
# Enable test utilities for Store implementations
testutil = ["dep:rand"]

[dependencies]
rand = { version = "0.9", optional = true }
anyhow = "1.0.99"
async-trait = "0.1.89"
bao-tree = "0.15.1"
base32-fs = "0.1.3"
base64 = "0.22.1"
blake3.workspace = true
bytes.workspace = true
data-encoding = "2.9.0"
futures.workspace = true
futures-core = "0.3.31"
minicbor.workspace = true
multibase = "0.9.1"
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace= true
tokio-stream = { version = "0.1.17" }
tokio-util = { version = "0.7.16", features = ["codec", "io", "io-util"] }
uuid = { version = "1.18.1", features = ["v4", "js"] }

# Native-only dependencies (filesystem, multi-threaded runtime)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs4 = "0.13.1"
tokio = { version = "1.48.0", features = ["sync", "macros", "io-util", "fs", "rt-multi-thread", "process"] }
