[package]
name = "s5_core"
version = "1.0.0-beta.1"
edition = "2024"
description = "types and traits shared by all S5 crates"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[features]
default = []
# Enable test utilities for Store implementations
testutil = ["dep:rand"]

[dependencies]
rand = { workspace = true, optional = true }
anyhow.workspace = true
async-trait.workspace = true
bao-tree = "0.16.0"
base32-fs = "0.1.3"
base64.workspace = true
blake3.workspace = true
bytes.workspace = true
data-encoding = "2.11.0"
ed25519-dalek.workspace = true
futures.workspace = true
futures-core.workspace = true
minicbor.workspace = true
multibase = "0.9.2"
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace= true
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["codec", "io", "io-util"] }
uuid = { version = "1.23.3", features = ["v4", "js"] }

# Native-only dependencies (filesystem, multi-threaded runtime)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs4 = "1.1.0"
tokio = { workspace = true, features = ["sync", "macros", "io-util", "fs", "rt-multi-thread", "process"] }
