[package]
name = "s5_fs"
version = "1.0.0-beta.1"
edition = "2024"
description = "Content-addressed filesystem abstraction for S5"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bytes.workspace = true
chacha20poly1305 = "0.10.1"
chrono = "0.4.42"
dashmap = "6.1.0"
ed25519 = "2.2.3"
ed25519-dalek = "2.2.0"
fs4 = "0.13.1"
futures.workspace = true
log.workspace = true
minicbor.workspace = true
s5_core.workspace = true
s5_store_local.workspace = true
serde.workspace = true
tempfile = "3.10.1"
tokio.workspace = true
tracing.workspace = true
zeroize = "1.7"
base64 = "0.22"
base32-fs = "0.1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
env_logger = "0.11"
s5_store_memory.workspace = true
criterion.workspace = true
