[package]
name = "s5_fs"
version = "1.0.0-beta.1"
edition = "2024"
description = "Content-addressed filesystem abstraction for S5"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bytes.workspace = true
chacha20poly1305 = "0.10.1"
chrono = "0.4.42"
dashmap = "6.1.0"
ed25519 = "2.2.3"
ed25519-dalek = "2.2.0"
futures.workspace = true
log.workspace = true
minicbor.workspace = true
s5_core.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
zeroize = "1.7"
base64 = "0.22"
base32-fs = "0.1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs4 = "0.13.1"
tempfile = "3.10.1"
s5_registry_redb = { workspace = true }
s5_store_local = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }

[dev-dependencies]
env_logger = "0.11"
s5_store_memory.workspace = true
criterion.workspace = true
