[package]
name = "s5_fs_v2"
version = "1.0.0-beta.1"
edition = "2024"
description = "Unified Node FS5 filesystem (V2)"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
chacha20 = "0.10.0"
futures.workspace = true
minicbor.workspace = true
s5_core.workspace = true
serde.workspace = true
tokio.workspace = true
zeroize.workspace = true
zstd = "0.13"

[dev-dependencies]
env_logger = "0.11"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
