[package]
name = "s5_fs_v2"
version.workspace = true
edition.workspace = true
description = "Unified Node FS5 filesystem (V2)"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
chacha20 = "0.10.1"
futures.workspace = true
gearhash = "0.1.3"
minicbor.workspace = true
s5_core.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
zeroize.workspace = true
zstd = "0.13"

[dev-dependencies]
env_logger = "0.11"
s5_store_memory.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
