[package]
name = "s5_fuse"
version.workspace = true
edition.workspace = true
description = "FUSE filesystem implementation for S5"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
libc.workspace = true
chacha20poly1305 = "0.10"

futures.workspace = true
futures-util.workspace = true

# workspace crates
s5_core.workspace = true
s5_fs_v2.workspace = true
s5_store_local.workspace = true

# fuse3 — async-native bindings against libfuse 3 (or fusermount3 in
# unprivileged mode). The path-based filesystem trait lets us serve the
# vault directly out of `s5_fs_v2::Snapshot` without our own inode table
# (the path → inode bridge inside fuse3 handles that).
fuse3 = { version = "0.9", features = ["tokio-runtime", "unprivileged"] }

# FUSE needs full tokio (native-only crate)
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
s5_fs_local.workspace = true
tempfile.workspace = true
