[package]
name = "s5_node"
version = "1.0.0-beta.1"
edition = "2024"
description = "Server and orchestration logic for S5 nodes"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
ed25519-dalek = "2.2.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
base64 = "0.22"
iroh.workspace = true
irpc.workspace = true
irpc-iroh.workspace = true
log = "0.4.28"
s5_blobs = { workspace = true, features = ["server"] }
s5_core.workspace = true
s5_fs.workspace = true
s5_registry.workspace = true
s5_registry_redb.workspace = true
s5_registry_store.workspace = true
s5_store_local.workspace = true
s5_store_memory.workspace = true
s5_store_s3.workspace = true
s5_store_sia.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
# Node needs full tokio (native-only crate)
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1"
tracing.workspace = true

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.10.1"

[features]
default = ["proto_blobs", "proto_registry", "proto_streams"]
proto_blobs = []
proto_registry = []
proto_streams = []
