[package]
name = "s5_node"
version = "1.0.0-beta.1"
edition = "2024"
description = "Server and orchestration logic for S5 nodes"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
age.workspace = true
anyhow.workspace = true
async-trait.workspace = true
# bech32 0.9 to match age's own secret-key wire format (deterministic paper age
# key); bip39 for the interim mnemonic. See src/mnemonic.rs.
bech32 = "0.9"
bip39 = "2.2"
blake3.workspace = true
bytes.workspace = true
dashmap.workspace = true
ed25519-dalek.workspace = true
futures-core.workspace = true
futures-util.workspace = true
hex.workspace = true
ignore = "0.4"
globset = "0.4"
base64.workspace = true
iroh.workspace = true
irpc.workspace = true
irpc-iroh.workspace = true
json-patch.workspace = true
log.workspace = true
minicbor.workspace = true
notify = "8"
rand.workspace = true
s5_blobs = { workspace = true, features = ["server"] }
s5_core.workspace = true
s5_fuse.workspace = true
s5_registry.workspace = true
s5_registry_redb.workspace = true
s5_registry_store.workspace = true
s5_store_local.workspace = true
s5_store_local_links.workspace = true
s5_store_memory.workspace = true
s5_store_s3.workspace = true
s5_store_sia.workspace = true
s5_store_fjall.workspace = true
s5_store_indexd.workspace = true
s5_store_packing.workspace = true
# s5_store_pixeldrain.workspace = true  # TODO: add to workspace
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { version = "0.3", features = ["formatting", "macros"] }
s5_fs_local.workspace = true
s5_fs_v2.workspace = true
s5_node_api.workspace = true
# Node needs full tokio (native-only crate)
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util.workspace = true
toml = "1.1.2"
tracing.workspace = true

[dev-dependencies]
sha2 = "0.11"
tempfile.workspace = true
filetime = "0.2"

[features]
default = ["proto_blobs", "proto_registry", "proto_streams"]
proto_blobs = []
proto_registry = []
proto_streams = []
