[package]
name = "s5_node_api"
version.workspace = true
edition.workspace = true
description = "S5 node API — RPC protocol, config types, and client for communicating with an S5 node"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
irpc.workspace = true
json-patch.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Native-only deps for service discovery (lock file + iroh connect)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "6.0.0"
hex.workspace = true
iroh.workspace = true
irpc-iroh.workspace = true
tokio = { workspace = true, features = ["rt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile.workspace = true
