[package]
name = "s5_registry"
version = "1.0.0-beta.1"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
iroh.workspace = true
irpc.workspace = true
irpc-iroh.workspace = true
s5_core.workspace = true
serde.workspace = true
tracing.workspace = true
