[package]
name = "s5_registry"
version.workspace = true
edition.workspace = true
description = "Registry service for S5"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
iroh.workspace = true
irpc.workspace = true
irpc-iroh.workspace = true
s5_core.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
