# Published as `s5_vup` (not `vup`/`vup_cli`/`vup-cli` — all taken by unrelated
# crates, and crates.io normalizes `_`=`-`). The package name and the binary are
# decoupled: `cargo install s5_vup` installs a binary called `vup`. The crate
# *directory* stays `vup_cli` (`cargo install --path vup_cli` still works); only
# the package name and `-p` selectors are `s5_vup`.
[package]
name = "s5_vup"
version.workspace = true
edition.workspace = true
description = "Vup Vault — personal E2EE backup, sync, archive, share and mount built on S5"
license.workspace = true
readme = "README.md"
repository.workspace = true

# The installed binary is `vup`, independent of the package name above.
[[bin]]
name = "vup"
path = "src/main.rs"

[dependencies]
age.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag = { version = "3", default-features = false, features = ["tracing"] }
dialoguer = "0.12"
directories = "6.0.0"
dirs = "6.0.0"
ed25519-dalek.workspace = true
humansize = "2"
# `automate --every 1h` duration parsing (Stage 7).
humantime = "2"
indicatif = "0.18"
hex.workspace = true
notify = "8"
rand.workspace = true
s5_core = { workspace = true }
s5_node = { workspace = true }
s5_node_api.workspace = true
s5_registry_store.workspace = true
s5_store_indexd.workspace = true
s5_store_local.workspace = true
s5_store_s3.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util.workspace = true
toml = "1.1"
tracing.workspace = true
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Exercise `store add`'s config patch through the same RFC-6902 engine the
# daemon applies it with, so the test proves the entry the daemon would accept.
json-patch.workspace = true
