[package]
name = "s5_client"
version = "1.0.0-beta.1"
edition = "2024"
description = "Lightweight S5 client library for key derivation and crypto primitives. Works on WASM and native targets. For advanced usage, use s5_core, s5_fs, s5_blobs directly."
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
# S5 crates
s5_fs = { workspace = true }

# Crypto (WASM-compatible)
blake3 = { version = "1.8.2", default-features = false }
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.2.0", default-features = false }
bip39 = { version = "2.2.0", default-features = false, features = ["alloc"] }
rand = { version = "0.8", optional = true }

# Utils
thiserror = "2.0"
hex = "0.4"

# RNG (needed for encryption with random nonce)
getrandom = { version = "0.2", optional = true }

[features]
default = ["std"]
std = ["dep:getrandom", "dep:rand", "bip39/rand", "bip39/std"]
# For WASM: use with getrandom/js feature enabled by consumer

[dev-dependencies]
