[package]
name = "s5_wasm"
version = "1.0.0-beta.1"
edition = "2024"
description = "WebAssembly bindings for S5 client in browsers"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared client logic
s5_client = { workspace = true, default-features = false }

# S5 protocol crates (without native features for WASM)
s5_core = { workspace = true }
s5_blobs = { workspace = true, default-features = false }
s5_fs = { workspace = true }
s5_registry = { workspace = true }

# BIP39 for seed phrase generation (WASM needs from_entropy)
bip39 = { version = "2.2.0", default-features = false, features = ["alloc"] }

# Iroh for networking (WASM-compatible)
iroh = { version = "0.94.0", default-features = false }

# Async / WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Utils - getrandom with js feature is critical for WASM crypto
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
bytes = { workspace = true }

[features]
default = []
