[package]
name = "s5_store_fjall"
edition.workspace = true
version.workspace = true
description = "Fjall LSM-tree blob store for S5 with KV separation"
repository.workspace = true
license.workspace = true

[dependencies]
s5_core = { workspace = true }
fjall = { version = "3.0", features = ["bytes_1"] }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
s5_core = { workspace = true, features = ["testutil"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
