[package]
name = "s5_store_local"
version = "1.0.0-beta.1"
edition = "2024"
description = "Local filesystem blob storage backend for S5"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
s5_core.workspace = true
serde.workspace = true
# Local store needs tokio fs (native-only crate)
tokio = { version = "1.48.0", features = ["sync", "macros", "io-util", "rt", "fs"] }
tokio-util.workspace = true
walkdir = "2.5.0"

[dev-dependencies]
s5_core = { workspace = true, features = ["testutil"] }
tempfile = "3"
